fix venn cutoff

--- a/imagineset/app/globals.css
+++ b/imagineset/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+._svg_1u3dt_30 {
+  width: calc(100% + 10px);
+  height: calc(100% + 10px);
+}
+
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
